v/0.16.0/_sources/examples/06_seasonal/02_dlesym_example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/06_seasonal/02_dlesym_example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_06_seasonal_02_dlesym_example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_06_seasonal_02_dlesym_example.py:


Running DLESyM Inference
========================

Basic deterministic inference workflow for the DLESyM model.

This example will demonstrate how to run a simple inference workflow with the
DLESyM model, which differs from other prognostic models in earth2studio.
DLESyM performs global earth system modeling, including atmosphere and ocean
components which evolve on different timescales (different temporal resolution).
Internally, the model uses a HEALPix nside=64 (approximately 1 degree) resolution
grid for the physical variables of interest. The model also uses some derived input
variables which are not provided by standard data sources but can be computed
from the standard variables.

In this example you will learn:

- How to instantiate the DLESyM model
- How to use the model API to generate a forecast
- How to use the output selection and regridding methods to select appropriate data
- How to use the DLESyMLatLon model with earth2studio workflows

.. GENERATED FROM PYTHON SOURCE LINES 40-47

.. code-block:: Python

    # /// script
    # dependencies = [
    #   "earth2studio[dlesym] @ git+https://github.com/NVIDIA/earth2studio.git@0.16.0",
    #   "cartopy",
    # ]
    # ///








.. GENERATED FROM PYTHON SOURCE LINES 48-66

Set Up
------
The first step is fetching appropriate input data for the model. The ERA5 data sources
in earth2studio provide data on the lat/lon grid, so have two options:

- Use the :py:class:`earth2studio.models.px.DLESyMLatLon` model. This version of DLESyM
  accepts inputs on the lat/lon grid and regrids them to the HEALPix grid internally,
  before returning the output regridded back to the lat/lon grid. This is the
  recommended approach for most users as it can be used directly with earth2studio
  data sources and workflows, since it performs regridding and pre-processing
  internally.
- Use the :py:class:`earth2studio.models.px.DLESyM` model, and handle the regridding of
  input lat/lon data ourselves. Since the model uses some derived variables which
  are not provided by the data source, we would also need to prepare these derived
  variables ourselves.

Let's load both of these models and inspect the expected input coordinates for each.
Also note the input and output variable set for each model.

.. GENERATED FROM PYTHON SOURCE LINES 68-113

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function
    import numpy as np
    import torch

    from earth2studio.data import ARCO
    from earth2studio.data.utils import fetch_data
    from earth2studio.models.px.dlesym import DLESyM, DLESyMLatLon

    device = "cuda"
    if not torch.cuda.is_available():
        raise RuntimeError("GPU/CUDA required for DLESyM")

    # Create the data source
    data = ARCO()

    # Load the default model package which downloads the check point from NGC
    # We will instantiate both versions of the model to demonstrate usage of each.
    package = DLESyMLatLon.load_default_package()
    model_ll = DLESyMLatLon.load_model(package).to(device)
    package = DLESyM.load_default_package()
    model_hpx = DLESyM.load_model(package).to(device)

    in_coords_ll = model_ll.input_coords()
    in_coords_hpx = model_hpx.input_coords()
    print(
        "DLESyM LatLon input coord shapes: ",
        [(k, v.shape) for k, v in in_coords_ll.items()],
    )
    print(
        "DLESyM HPX input coord shapes: ", [(k, v.shape) for k, v in in_coords_hpx.items()]
    )
    print("Lat-lon input variable names: ", in_coords_ll["variable"])
    print(
        "Lat-lon output variable names: ", model_ll.output_coords(in_coords_ll)["variable"]
    )
    print("HEALPix input variable names: ", in_coords_hpx["variable"])
    print(
        "HEALPix output variable names: ",
        model_hpx.output_coords(in_coords_hpx)["variable"],
    )




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading config.yaml: 0%|          | 0.00/1.36k [00:00<?, ?B/s]    Downloading config.yaml: 100%|██████████| 1.36k/1.36k [00:00<00:00, 6.52kB/s]    Downloading config.yaml: 100%|██████████| 1.36k/1.36k [00:00<00:00, 6.50kB/s]
    Downloading atmos_model_0.mdlus: 0%|          | 0.00/37.6M [00:00<?, ?B/s]    Downloading atmos_model_0.mdlus: 27%|██▋       | 10.0M/37.6M [00:01<00:03, 9.62MB/s]    Downloading atmos_model_0.mdlus: 53%|█████▎    | 20.0M/37.6M [00:01<00:01, 15.4MB/s]    Downloading atmos_model_0.mdlus: 80%|███████▉  | 30.0M/37.6M [00:01<00:00, 18.3MB/s]    Downloading atmos_model_0.mdlus: 100%|██████████| 37.6M/37.6M [00:02<00:00, 20.2MB/s]    Downloading atmos_model_0.mdlus: 100%|██████████| 37.6M/37.6M [00:02<00:00, 17.6MB/s]
    Downloading ocean_model_0.mdlus: 0%|          | 0.00/2.97M [00:00<?, ?B/s]    Downloading ocean_model_0.mdlus: 100%|██████████| 2.97M/2.97M [00:00<00:00, 7.45MB/s]    Downloading ocean_model_0.mdlus: 100%|██████████| 2.97M/2.97M [00:00<00:00, 7.40MB/s]
    Downloading hpx_lat.npy: 0%|          | 0.00/384k [00:00<?, ?B/s]    Downloading hpx_lat.npy: 100%|██████████| 384k/384k [00:00<00:00, 652kB/s]    Downloading hpx_lat.npy: 100%|██████████| 384k/384k [00:00<00:00, 651kB/s]
    Downloading hpx_lon.npy: 0%|          | 0.00/384k [00:00<?, ?B/s]    Downloading hpx_lon.npy: 100%|██████████| 384k/384k [00:00<00:00, 1.42MB/s]    Downloading hpx_lon.npy: 100%|██████████| 384k/384k [00:00<00:00, 1.41MB/s]
    Downloading land_sea_mask.npy: 0%|          | 0.00/192k [00:00<?, ?B/s]    Downloading land_sea_mask.npy: 100%|██████████| 192k/192k [00:00<00:00, 338kB/s]    Downloading land_sea_mask.npy: 100%|██████████| 192k/192k [00:00<00:00, 337kB/s]
    Downloading topography.npy: 0%|          | 0.00/192k [00:00<?, ?B/s]    Downloading topography.npy: 100%|██████████| 192k/192k [00:00<00:00, 793kB/s]    Downloading topography.npy: 100%|██████████| 192k/192k [00:00<00:00, 789kB/s]
    DLESyM LatLon input coord shapes:  [('batch', (0,)), ('time', (0,)), ('lead_time', (9,)), ('variable', (11,)), ('lat', (721,)), ('lon', (1440,))]
    DLESyM HPX input coord shapes:  [('batch', (0,)), ('time', (0,)), ('lead_time', (9,)), ('variable', (9,)), ('face', (12,)), ('height', (64,)), ('width', (64,))]
    Lat-lon input variable names:  ['z500' 'z1000' 't2m' 'tcwv' 't850' 'z250' 'sst' 'u10m' 'v10m' 'z300'
     'z700']
    Lat-lon output variable names:  ['z500' 'tau300-700' 'z1000' 't2m' 'tcwv' 't850' 'z250' 'ws10m' 'sst']
    HEALPix input variable names:  ['z500' 'tau300-700' 'z1000' 't2m' 'tcwv' 't850' 'z250' 'ws10m' 'sst']
    HEALPix output variable names:  ['z500' 'tau300-700' 'z1000' 't2m' 'tcwv' 't850' 'z250' 'ws10m' 'sst']




.. GENERATED FROM PYTHON SOURCE LINES 114-129

Making Predictions, Regridding, and Selecting Outputs
-----------------------------------------------------
Let's now pull some example data and make predictions with the model. As the
data source provides lat/lon data, we can use the :py:class:`earth2studio.models.px.DLESyMLatLon` model.

In addition, we demonstrate how to use the regridding utilities provided by
`DLESyMLatLon` to regrid onto the HEALPix grid. The :py:class:`earth2studio.models.px.DLESyM`
model can then be used directly with the HEALPix data.

Finally, a key aspect of the DLESyM model is that it makes predictions for the atmosphere
and ocean components at different timesteps, because the atmosphere is faster-evolving
than the ocean. The atmosphere is predicted every 6 hours, while the ocean is only
predicted every 48 hours. Thus, not all output lead times are valid for the ocean
component. For convenience, we can use a method that selects only the valid outputs
for each of the atmosphere and ocean components.

.. GENERATED FROM PYTHON SOURCE LINES 131-166

.. code-block:: Python

    ic_date = np.datetime64("2021-06-15")

    # Fetch some example data
    x, coords = fetch_data(
        source=data,
        time=np.array([ic_date]),
        variable=np.array(in_coords_ll["variable"]),
        lead_time=in_coords_ll["lead_time"],
        device=device,
    )

    # Can call the `DLESyMLatLon` model directly with the input lat/lon data
    y, y_coords = model_ll(x, coords)

    # Or, we can use the pre-processing and regridding utilities to regrid the data onto
    # the HEALPix grid, and then run directly with `DLESyM`, which expects HEALPix data
    x_prep, coords_prep = model_ll._prepare_derived_variables(x, coords)
    x_hpx, coords_hpx = model_ll.to_hpx(x_prep), model_ll.coords_to_hpx(coords_prep)
    y_hpx, y_coords_hpx = model_hpx(x_hpx, coords_hpx)

    # Retrieve the valid outputs for atmos/ocean components from the predictions
    y_atmos, y_atmos_coords = model_ll.retrieve_valid_atmos_outputs(y, y_coords)
    y_ocean, y_ocean_coords = model_ll.retrieve_valid_ocean_outputs(y, y_coords)

    print(
        "Atmosphere outputs (variables, lead_time [hrs]):",
        y_atmos_coords["variable"],
        y_atmos_coords["lead_time"].astype("timedelta64[h]"),
    )
    print(
        "Ocean outputs (variables, lead_time [hrs]):",
        y_ocean_coords["variable"],
        y_ocean_coords["lead_time"].astype("timedelta64[h]"),
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-06-29 18:00:50.700 | DEBUG    | earth2studio.data.arco:_async_init:128 - Using Multi-Storage Client for ARCO data access
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.498 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064592.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.501 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064592.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.710 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064592.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.724 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064592.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.732 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064592.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.741 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064592.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:51.749 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064592.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:03,  2.00it/s]    Fetching ARCO data:  57%|█████▋    | 4/7 [00:00<00:00,  5.33it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.20it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.48it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.61it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.189 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064598.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.192 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064598.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.192 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064598.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.193 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064598.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.197 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064598.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.198 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064598.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:54.202 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064598.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.04it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.38it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.73it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.60it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.883 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064604.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.888 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064604.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.892 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064604.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.894 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064604.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.898 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064604.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.899 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064604.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:56.913 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064604.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.35it/s]    Fetching ARCO data:  43%|████▎     | 3/7 [00:00<00:00,  6.30it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.17it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.60it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.66it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.518 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064610.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.528 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064610.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.528 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064610.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.529 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064610.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.542 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064610.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.546 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064610.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:00:59.547 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064610.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.17it/s]    Fetching ARCO data:  71%|███████▏  | 5/7 [00:00<00:00,  6.91it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  1.96it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  1.97it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  2.31it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.561 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064616.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.562 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064616.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.564 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064616.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.567 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064616.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.567 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064616.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.573 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064616.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:02.615 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064616.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.30it/s]    Fetching ARCO data:  43%|████▎     | 3/7 [00:00<00:00,  6.67it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.57it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.56it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.74it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.112 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064622.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.119 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064622.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.121 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064622.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.125 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064622.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.126 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064622.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.128 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064622.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:05.196 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064622.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:03,  1.81it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.12it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  2.26it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  2.20it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.299 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064628.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.306 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064628.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.309 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064628.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.310 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064628.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.310 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064628.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.312 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064628.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:08.325 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064628.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.06it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  2.44it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.48it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:02<00:00,  2.45it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.169 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064634.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.171 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064634.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.177 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064634.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.177 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064634.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.180 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064634.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.185 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064634.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:11.186 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064634.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.10it/s]    Fetching ARCO data:  71%|███████▏  | 5/7 [00:00<00:00, 10.16it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  1.63it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  1.98it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.705 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/geopotential/1064640.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.711 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_u_component_of_wind/1064640.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.713 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/total_column_water_vapour/1064640.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.714 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/sea_surface_temperature/1064640.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.717 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/10m_v_component_of_wind/1064640.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.734 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/2m_temperature/1064640.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]                                                             2026-06-29 18:01:14.753 | DEBUG    | earth2studio.data.utils:_make_local_details:1070 - Copying /gcp-public-data-arco-era5/ar/full_37-1h-0p25deg-chunk-1.zarr-v3/temperature/1064640.0.0.0 to local cache
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  14%|█▍        | 1/7 [00:00<00:02,  2.13it/s]    Fetching ARCO data:  57%|█████▋    | 4/7 [00:00<00:00,  8.53it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:02<00:00,  1.86it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:03<00:00,  1.96it/s]
    Atmosphere outputs (variables, lead_time [hrs]): ['z500' 'tau300-700' 'z1000' 't2m' 'tcwv' 't850' 'z250' 'ws10m'] [ 6 12 18 24 30 36 42 48 54 60 66 72 78 84 90 96]
    Ocean outputs (variables, lead_time [hrs]): ['sst'] [48 96]




.. GENERATED FROM PYTHON SOURCE LINES 167-173

Model Iteration for Longer Forecasts
------------------------------------
Similar to other models in earth2studio, we can use the model iterator to loop
over forecasted outputs. A single step of the DLESyM model produces predictions
over 4 days (96 hours), so to make a sub-seasonal forecast we can take 15 steps for
a total of 60 days.

.. GENERATED FROM PYTHON SOURCE LINES 175-187

.. code-block:: Python

    n_steps = 16
    model_iter_ll = model_ll.create_iterator(x, coords)

    for i in range(n_steps):
        x, x_coords = next(model_iter_ll)
        if i > 0:  # Don't retrieve the first step as it is the initial condition
            x_atmos, x_atmos_coords = model_ll.retrieve_valid_atmos_outputs(x, x_coords)
            x_ocean, x_ocean_coords = model_ll.retrieve_valid_ocean_outputs(x, x_coords)

    print(f"Completed forecast with {n_steps} steps")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Completed forecast with 16 steps




.. GENERATED FROM PYTHON SOURCE LINES 188-195

Using Built-in Deterministic Workflow
-------------------------------------
Because the `DLESyMLatLon` model permits usage of data coming directly from an
earth2studio data source, we can use the built-in deterministic workflow to generate
a forecast as well. The only caveat is we need to explitcitly specify the output
lead time coordinates that will be generated by the model, since it has different
input and output lead time dimensions.

.. GENERATED FROM PYTHON SOURCE LINES 197-216

.. code-block:: Python

    import earth2studio.run as run
    from earth2studio.io import KVBackend

    io = KVBackend()

    output_coords = model_ll.output_coords(coords)
    inp_lead_time = model_ll.input_coords()["lead_time"]
    out_lead_times = [
        output_coords["lead_time"] + output_coords["lead_time"][-1] * i
        for i in range(n_steps)
    ]
    output_coords["lead_time"] = np.concatenate([inp_lead_time, *out_lead_times])
    io = run.deterministic(
        [ic_date], n_steps, model_ll, data, io, output_coords=output_coords
    )

    ds = io.to_xarray()
    print(ds)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2026-06-29 18:01:26.449 | INFO     | earth2studio.run:deterministic:87 - Running simple workflow!
    2026-06-29 18:01:26.449 | INFO     | earth2studio.run:deterministic:94 - Inference device: cuda
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 25.44it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 29.42it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 29.16it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 28.55it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 25.31it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 29.28it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 25.80it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 29.81it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 24.35it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 27.72it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 29.71it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 29.58it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 30.08it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 29.75it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 23.18it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 26.83it/s]
    Fetching ARCO data:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching ARCO data:  86%|████████▌ | 6/7 [00:00<00:00, 24.82it/s]    Fetching ARCO data: 100%|██████████| 7/7 [00:00<00:00, 28.23it/s]
    2026-06-29 18:01:29.290 | SUCCESS  | earth2studio.run:deterministic:156 - Fetched data from ARCO
    2026-06-29 18:01:29.291 | INFO     | earth2studio.run:deterministic:164 - Inference starting!

    Running inference:   0%|          | 0/17 [00:00<?, ?it/s]
    Running inference:   6%|▌         | 1/17 [00:00<00:08,  1.98it/s]
    Running inference:  12%|█▏        | 2/17 [00:01<00:07,  1.92it/s]
    Running inference:  18%|█▊        | 3/17 [00:01<00:07,  1.91it/s]
    Running inference:  24%|██▎       | 4/17 [00:02<00:06,  1.90it/s]
    Running inference:  29%|██▉       | 5/17 [00:02<00:06,  1.90it/s]
    Running inference:  35%|███▌      | 6/17 [00:03<00:05,  1.90it/s]
    Running inference:  41%|████      | 7/17 [00:03<00:05,  1.90it/s]
    Running inference:  47%|████▋     | 8/17 [00:04<00:04,  1.90it/s]
    Running inference:  53%|█████▎    | 9/17 [00:04<00:04,  1.90it/s]
    Running inference:  59%|█████▉    | 10/17 [00:05<00:03,  1.90it/s]
    Running inference:  65%|██████▍   | 11/17 [00:05<00:03,  1.90it/s]
    Running inference:  71%|███████   | 12/17 [00:06<00:02,  1.90it/s]
    Running inference:  76%|███████▋  | 13/17 [00:06<00:02,  1.90it/s]
    Running inference:  82%|████████▏ | 14/17 [00:07<00:01,  1.84it/s]
    Running inference:  88%|████████▊ | 15/17 [00:07<00:01,  1.80it/s]
    Running inference:  94%|█████████▍| 16/17 [00:08<00:00,  1.77it/s]
    Running inference: 100%|██████████| 17/17 [00:09<00:00,  1.79it/s]    Running inference: 100%|██████████| 17/17 [00:09<00:00,  1.86it/s]
    2026-06-29 18:01:38.417 | SUCCESS  | earth2studio.run:deterministic:191 - 
    Inference complete
    <xarray.Dataset> Size: 10GB
    Dimensions:     (time: 1, lead_time: 265, lat: 721, lon: 1440)
    Coordinates:
      * time        (time) datetime64[s] 8B 2021-06-15
      * lead_time   (lead_time) timedelta64[ns] 2kB -2 days +00:00:00 ... 64 days...
      * lat         (lat) float64 6kB 90.0 89.75 89.5 89.25 ... -89.5 -89.75 -90.0
      * lon         (lon) float64 12kB 0.0 0.25 0.5 0.75 ... 359.0 359.2 359.5 359.8
    Data variables:
        z500        (time, lead_time, lat, lon) float32 1GB 5.253e+04 ... 4.784e+04
        tau300-700  (time, lead_time, lat, lon) float32 1GB 5.85e+04 ... 5.457e+04
        z1000       (time, lead_time, lat, lon) float32 1GB 890.4 890.4 ... -859.3
        t2m         (time, lead_time, lat, lon) float32 1GB 273.7 273.7 ... 225.4
        tcwv        (time, lead_time, lat, lon) float32 1GB 8.898 8.898 ... 0.3585
        t850        (time, lead_time, lat, lon) float32 1GB 265.6 265.6 ... 242.9
        z250        (time, lead_time, lat, lon) float32 1GB 9.844e+04 ... 9.048e+04
        ws10m       (time, lead_time, lat, lon) float32 1GB 0.0292 0.0292 ... 4.117
        sst         (time, lead_time, lat, lon) float32 1GB 271.5 271.5 ... 272.1




.. GENERATED FROM PYTHON SOURCE LINES 217-220

Plotting the Outputs
--------------------
Let's plot some of the forecasted outputs for the atmosphere and ocean components.

.. GENERATED FROM PYTHON SOURCE LINES 222-285

.. code-block:: Python

    import cartopy.crs as ccrs
    import cartopy.feature as cfeature
    import matplotlib.pyplot as plt

    # lat = x_atmos_coords["lat"]
    # lon = x_atmos_coords["lon"]
    atmos_var, atmos_units = "ws10m", "m/s"
    ocean_var, ocean_units = "sst", "K"
    # atmos_var_idx = list(x_atmos_coords["variable"]).index(atmos_var)
    # ocean_var_idx = list(x_ocean_coords["variable"]).index(ocean_var)
    lead_time = ds.lead_time.values[-1]

    plt.close("all")
    # Create a Robinson projection
    projection = ccrs.Robinson()

    # Create a figure and axes with the specified projection
    fig, axs = plt.subplots(1, 2, subplot_kw={"projection": projection}, figsize=(15, 6))

    # Plot the field using pcolormesh
    im = axs[0].pcolormesh(
        ds.lon.values,
        ds.lat.values,
        ds[atmos_var].sel(time=ic_date, lead_time=lead_time).values,
        transform=ccrs.PlateCarree(),
        cmap="cividis",
    )

    # Set title
    axs[0].set_title(
        f"Initialization: {ic_date} - Lead time: {lead_time.astype('timedelta64[h]')}"
    )

    # Add coastlines and gridlines
    axs[0].coastlines()
    axs[0].gridlines()

    cbar = fig.colorbar(im, ax=axs[0], orientation="horizontal", pad=0.05)
    cbar.set_label(f"{atmos_var} [{atmos_units}]")

    # Plot the ocean component
    im = axs[1].pcolormesh(
        ds.lon.values,
        ds.lat.values,
        ds[ocean_var].sel(time=ic_date, lead_time=lead_time).values,
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    axs[1].set_title(
        f"Initialization: {ic_date} - Lead time: {lead_time.astype('timedelta64[h]')}"
    )

    # Add coastlines and gridlines
    axs[1].add_feature(cfeature.LAND, color="grey", zorder=100)
    axs[1].coastlines()
    axs[1].gridlines()

    cbar = fig.colorbar(im, ax=axs[1], orientation="horizontal", pad=0.05)
    cbar.set_label(f"{ocean_var} [{ocean_units}]")

    plt.tight_layout()
    plt.savefig("outputs/14_ws10m_sst_prediction.png")



.. image-sg:: /examples/06_seasonal/images/sphx_glr_02_dlesym_example_001.png
   :alt: Initialization: 2021-06-15 - Lead time: 1536 hours, Initialization: 2021-06-15 - Lead time: 1536 hours
   :srcset: /examples/06_seasonal/images/sphx_glr_02_dlesym_example_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 32.869 seconds)


.. _sphx_glr_download_examples_06_seasonal_02_dlesym_example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 02_dlesym_example.ipynb <02_dlesym_example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 02_dlesym_example.py <02_dlesym_example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 02_dlesym_example.zip <02_dlesym_example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
